# UTest

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
docs/: README.md
examples/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp
single-include/UTest/: UTest.hpp
src/: CMakeLists.txt  CommandStatus.hpp  CommonNamespace.hpp  ConsoleColor.hpp  ConsoleColors.hpp  ConsoleColorsConfig.hpp  ConsoleSettings.hpp  KeyWordsDefine.hpp  OutputConfig.hpp  StdOstreamTest.hpp  TestClass.hpp  TestDefine.hpp  TestGroup.hpp  TestGroupStatus.hpp  TestIOManager.hpp  TestRegistry.hpp  TestResult.hpp  TestStatus.hpp  UTest.hpp  assert_true_define.hpp  command_status_class.hpp  expect_true_define.hpp  std_cout_test.hpp  std_ostream_test.hpp  test_class.hpp  test_define.hpp  test_group.hpp  test_group_class.hpp  test_group_status.hpp  test_group_status_class.hpp  test_io_manager_class.hpp  test_registry.hpp  test_registry_class.hpp  test_result.hpp  test_result_class.hpp  test_status.hpp  test_status_class.hpp
src/asserts/: AssertEqualDefine.hpp  AssertFalseDefine.hpp  AssertTrueDefine.hpp  assert_true_define.hpp
src/expects/: ExpectEqualDefine.hpp  ExpectFalseDefine.hpp  ExpectTrueDefine.hpp  expect_true_define.hpp
src/generate_include_templates/: CommonTemplate.hpp  SingleInclude.hpp
tests/: CMakeLists.txt  tests.cpp
tests/assert_tests/: AssertTests.hpp  AssertTrueTest.hpp  assert_true_test.hpp
tools/: FileIncluder.py
utils/: file_includer.py
